--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="hay">
           <p>Hello, I'm a trainee software developer from Coventry.</p>
           <p>I'm looking for an junior PHP posistion to further my web Developing skills.</p>
-          <p>I've completed my Front End Web Development, Full Stack JavaScript PHP courses. See
-          <a target="_blank" href="https://teamtreehouse.com/danielefusaridoughty">Achievements</a></p>
+          <p>I've completed my Front End Web Development, Full Stack JavaScript  & PHP courses. </p>
+          <p>See <a target="_blank" href="https://teamtreehouse.com/danielefusaridoughty">Achievements</a></p>
         </div>
         <a href="#home">Home</a>
       </section>
