--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           <p>
             While studying I took a part time job at a travel agents hoping to
             find work as a computer technician. However, having progressed as an
-            overseas operation manager, I found myself still their 15 years later.
+            overseas operation manager, I found myself still there 15 years later.
             Eventually, in the last few years at TUI, I was working very closely
             with a wiki database, and this renewed my interest. I decided to take
-            a year out and independently study Front End Web Development.
+            a year out and independently studied Front End Web Development.
             I am now ready to further my skills and begin my career as a Junior PHP developer.
           </p>
         </div>
@@ -116,7 +116,7 @@
         <h2>Contacts</h2>
         <div class="personal_info">
           <p>NAME: Daniele Fusari</p>
-          <p>LOCATION Coventry</p>
+          <p>LOCATION: Coventry</p>
           <p>Telephone</p>
           <a href="tel:07449998388">0744 999 83 88</a> <br>
           <p>E-Mail</p>
