Update comment & CV

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
             a year out and independently studied Front End Web Development.
             I am now ready to further my skills and begin my career as a Junior PHP developer.
           </p>
+          <p>Programming is something I have been passionate about for a number of years which led to a personal goal of working in this industry. Therefore, I’ve been studying independently from home over the past two years in order to learn the following programming,
+          HTML, CSS, JavaScript, MySQL, PHP, Laravel.
+          I have come to a point where I need to gain more experience in order to further my progress.
+          I would really appreciate an opportunity like this. </p>
+          <p> Thank you for taking the time to look at my portfolio.</p>
         </div>
         <a href="#home">Home</a>
       </section>
